--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.12",
+    "@expo/vector-icons": "^13.0.0",
+    "dom-to-image": "^2.6.0",
+    "expo": "^47.0.13",
+    "expo-image-picker": "~14.0.2",
+    "expo-media-library": "~15.0.0",
     "expo-status-bar": "~1.4.2",
+    "metro-core": "^0.74.1",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-view-shot": "3.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "private": true
 }
